# minixrs

./: .gitmodules  .rules  BLOCKERS.md  Cargo.toml  FORK_ANALYSIS.md  Justfile  LICENSE.md  PER_PROC_PAGE_TABLES.md  PM2.md  PORTING_PLAN.md  README.md  TESTING.md  VMFORK.md  VMS.md  VM_PHYS_MEM.md  check_size.rs  input.txt  riscv64gc-unknown-minix.json  x86_64-pc-minix.json
.agents/skills/bare-metal-debug/: SKILL.md
.agents/skills/git-commit-messages/: SKILL.md  example-conversation.md
.agents/skills/minix-boot-process/: SKILL.md
.agents/skills/minix-c-to-rust/: SKILL.md
.agents/skills/minix-ipc-patterns/: SKILL.md
.agents/skills/minix-server-patterns/: SKILL.md
.agents/skills/minix-testing/: SKILL.md
.cargo/: config.toml
.zed/: settings.json
crates/arch-common/: Cargo.toml
crates/arch-common/src/: com.rs  consts.rs  devio.rs  dmap.rs  endpoint.rs  ipc.rs  ipcconst.rs  lib.rs  safecopies.rs  sys_config.rs  types.rs  vm.rs
crates/arch-riscv64/: Cargo.toml
crates/arch-riscv64/src/: alloc.rs  boot.rs  clint.rs  cpulocals.rs  hal.rs  lib.rs  mcontext.rs  param.rs  plic.rs  psl.rs  pte.rs  sbi.rs  switch.rs  trap.rs  trap_asm.S  trap_asm.rs  uart.rs  vmparam.rs
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: alloc.rs  apic.rs  arch_proc.rs  arch_syscall.rs  asm.rs  cpu_msr.rs  cpulocals.rs  cpuvar.rs  frame.rs  hal.rs  hw.rs  idt.rs  interrupt.rs  lib.rs  mcontext.rs  multiboot.rs  param.rs  pcb.rs  pci.rs  psl.rs  pte.rs  segments.rs  spinlock.rs  tss.rs  vmparam.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: arch_io.rs  lib.rs
crates/drivers/src/bus/: i2c.rs  mod.rs  pci.rs  ti1225.rs  virtio.rs
crates/drivers/src/clock/: mod.rs  rtc.rs
crates/drivers/src/eeprom/: cat24c256.rs  mod.rs
crates/drivers/src/input/: constants.rs  controller.rs  driver.rs  keyboard.rs  mod.rs  mouse.rs  scanmap.rs
crates/drivers/src/storage/: ahci.rs  at_wini.rs  dma.rs  fbd.rs  filter.rs  floppy.rs  memory.rs  mmc.rs  mod.rs  ramdisk.rs  virtio_blk.rs  vnd.rs
crates/drivers/src/system/: gpio.rs  klog.rs  mod.rs  random.rs
crates/drivers/src/tty/: mod.rs  pty.rs  rs232.rs
crates/drivers/src/video/: fb.rs  mod.rs  tda19988.rs
crates/fs/: Cargo.toml
crates/fs/src/: block_io.rs  lib.rs
crates/fs/src/ext2/: balloc.rs  consts.rs  glo.rs  ialloc.rs  inode.rs  link.rs  main.rs  misc.rs  mod.rs  mount.rs  open.rs  path.rs  protect.rs  read.rs  stadir.rs  super_.rs  table.rs  time.rs  types.rs  utility.rs  write.rs
crates/fs/src/iso9660/: consts.rs  glo.rs  inode.rs  main.rs  misc.rs  mod.rs  mount.rs  path.rs  read.rs  stadir.rs  super.rs  table.rs  types.rs  utility.rs
crates/fs/src/mfs/: cache.rs  consts.rs  glo.rs  inode.rs  link.rs  main.rs  misc.rs  mod.rs  mount.rs  open.rs  path.rs  protect.rs  read.rs  stats.rs  super_block.rs  table.rs  time.rs  types.rs  utility.rs  write.rs
crates/fs/src/pfs/: bitmap.rs  buffer.rs  consts.rs  glo.rs  inode.rs  link.rs  main.rs  misc.rs  mod.rs  mount.rs  open.rs  path.rs  read.rs  stadir.rs  table.rs  time.rs  types.rs  utility.rs
crates/fs/src/procfs/: buf.rs  consts.rs  cpuinfo.rs  main.rs  misc.rs  mod.rs  pid.rs  root.rs  tree.rs  types.rs
crates/fs/src/vbfs/: config.rs  mod.rs  server.rs
crates/kernel/: Cargo.toml
crates/kernel-boot/: Cargo.toml  build.rs  trampoline.ld
crates/kernel-boot/src/: boot_init.rs  boot_test.rs  lib.rs  main.rs  qemu.rs  riscv64.rs  test_runner.rs  timer.rs  trampoline.S
crates/kernel-tests/: Cargo.toml
crates/kernel-tests/.cargo/: config.toml
crates/kernel-tests/src/: main.rs
crates/kernel/src/: arch_compat.rs  clock.rs  debug.rs  elf.rs  exec.rs  glo.rs  grants.rs  hal.rs  initramfs.rs  interrupt.rs  ipc.rs  lib.rs  minixfs.rs  pagetable.rs  panic.rs  priv.rs  proc.rs  profile.rs  sched.rs  ser_input.rs  smp.rs  syscall.rs  system.rs  table.rs  tests.rs  vm.rs
crates/libs/: Cargo.toml
crates/libs/src/: lib.rs
crates/libs/src/libminixfs/: cache.rs  constants.rs  credentials.rs  errors.rs  mod.rs  tests.rs  types.rs
crates/libs/src/vtreefs/: mod.rs
crates/minix-libc/: Cargo.toml
crates/minix-libc/src/: lib.rs
crates/minix-rt/: Cargo.toml
crates/minix-rt/src/: lib.rs
crates/minix-std/: Cargo.toml
crates/minix-std/src/: fs.rs  lib.rs  net.rs  process.rs  time.rs  vmem.rs
crates/minix-util/: Cargo.toml
crates/minix-util/src/: bdev.rs  cdev.rs  devman.rs  ds.rs  lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/servers/: Cargo.toml
crates/servers/src/: clock_server.rs  devman.rs  ds.rs  ipc.rs  lib.rs  mutex.rs  pm.rs  ramdisk.rs  rs.rs  sched.rs  tty.rs
crates/servers/src/vfs/: call.rs  consts.rs  device.rs  dmap.rs  filedes.rs  glo.rs  grant.rs  main.rs  misc.rs  mmap.rs  mod.rs  mount.rs  path.rs  pm.rs  request.rs  stadir.rs  table.rs  types.rs  worker.rs
crates/servers/src/vm/: cow.rs  mem.rs  mod.rs  pb.rs  proc.rs  region.rs
crates/userland/: Cargo.toml
crates/userland/src/: lib.rs
tools/: jsh.rs  mbr.S  minix-raw-riscv64.ld  minix-raw.ld  minix-user.ld  mkboot.rs  mkimg.rs  mkinitramfs.rs  mkminixfs.rs  stage2.S
