[workspace]
resolver = "3"

members = [
    "crates/arch-common",
    "crates/arch-x86_64",
    "crates/arch-riscv64",
    "crates/drivers",
    "crates/fs",
    "crates/kernel",
    "crates/kernel-boot",
    "crates/libs",
    "crates/minix-libc",
    "crates/minix-rt",
    "crates/minix-std",
    "crates/minix-util",
    "crates/net",
    "crates/servers",
    "crates/userland",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "GPL2.0"

[workspace.dependencies]
bitflags = { version = "2", default-features = false }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
