[package]
name = "kernel-boot"
version = "0.1.0"
description = "Boot binary crate (breaks circular dep between kernel and arch-x86_64)"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[features]
default = []
embed_initramfs = ["kernel/embed_initramfs"]
integration-tests = ["kernel/qemu-tests"]

[lib]
name = "kernel_boot"
path = "src/lib.rs"

[dependencies]
arch-common = { path = "../arch-common" }
kernel = { path = "../kernel" }
drivers = { path = "../drivers" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch-x86_64 = { path = "../arch-x86_64" }
