[package]
name = "kernel-boot"
version = "0.1.0"
description = "Boot binary crate (breaks circular dep between kernel and arch-x86_64)"
autobins = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[features]
default = []
embed_initramfs = ["kernel/embed_initramfs"]
embed_minixfs = ["kernel/embed_minixfs"]
integration-tests = ["kernel/qemu-tests"]
boot-test = []
riscv64 = ["kernel/riscv64"]

[lib]
name = "kernel_boot"
path = "src/lib.rs"

[[bin]]
name = "kernel-boot"
path = "src/main.rs"
required-features = []

[dependencies]
arch-common = { path = "../arch-common" }
kernel = { path = "../kernel" }
drivers = { path = "../drivers" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch-x86_64 = { path = "../arch-x86_64" }

[[bin]]
name = "kernel-boot-riscv64"
path = "src/riscv64.rs"
required-features = ["riscv64"]

[target.'cfg(target_arch = "riscv64")'.dependencies]
arch-riscv64 = { path = "../arch-riscv64" }
