[package]
name = "kernel"
version = "0.1.0"
description = "Core kernel: processes, scheduling, IPC, VM"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[features]
default = []
embed_initramfs = []
qemu-tests = []

[dependencies]
arch-common = { path = "../arch-common" }
bitflags = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch-x86_64 = { path = "../arch-x86_64" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
arch-riscv64 = { path = "../arch-riscv64" }
