[package]
name = "servers"
version = "0.1.0"
description = "System server crates (SEF, syslib for user-space servers)"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[dependencies]
kernel = { path = "../kernel" }
arch-common = { path = "../arch-common" }
minix-rt = { path = "../minix-rt" }
minix-std = { path = "../minix-std" }
drivers = { path = "../drivers" }

# Binary targets — these are #![no_std] / #![no_main] embedded MINIX
# server binaries that cannot run as host-native tests. Tests live in the lib target.
[[bin]]
name = "pm"
path = "src/bin/pm.rs"
test = false

[[bin]]
name = "vfs"
path = "src/bin/vfs.rs"
test = false

[[bin]]
name = "vm"
path = "src/bin/vm.rs"
test = false

[[bin]]
name = "rs"
path = "src/bin/rs.rs"
test = false

[[bin]]
name = "ds"
path = "src/bin/ds.rs"
test = false

[[bin]]
name = "sched"
path = "src/bin/sched.rs"
test = false

[[bin]]
name = "tty"
path = "src/bin/tty.rs"
test = false

[[bin]]
name = "ramdisk"
path = "src/bin/ramdisk.rs"
test = false
